# indyk-tree

./: .gitignore  CITATION.cff  LICENSE  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  generators.py  harness.py  instrumented.py  plots.py  run_benchmark.py
examples/: basic_usage.py  benchmark_vs_bruteforce.py
results/: PROVENANCE.md  benchmark_raw.csv  benchmark_raw_pre_bugfix.csv
src/indyk_tree/: __init__.py  geometry.py  nodes.py  tree.py
tests/: test_construction.py  test_correctness.py  test_harness.py
