[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indyk-tree"
version = "0.1.0"
description = "Static ℓ∞ approximate nearest neighbor data structure (Indyk, JCSS 2001)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Weston Jackson", email = "weston.j.jackson@gmail.com" }]
keywords = ["nearest-neighbor", "approximate-nn", "data-structures", "algorithms", "linfinity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/westonjackson/indyk-tree"
Repository = "https://github.com/westonjackson/indyk-tree"
Issues = "https://github.com/westonjackson/indyk-tree/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/indyk_tree"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "D",   # pydocstyle
]
ignore = [
    "ANN101",  # missing type for 'self'
    "ANN102",  # missing type for 'cls'
    "D105",    # missing docstring in magic method
    "D107",    # missing docstring in __init__
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]
"examples/*" = ["ANN", "D", "T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/indyk_tree"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
